fix scrollbar color & size

--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -15,7 +15,7 @@
 
 /* width */
 .vf-selector-area::-webkit-scrollbar {
-  width: 10px;
+  width: 12px;
 }
 
 /* Track */
@@ -25,12 +25,12 @@
 }
 /* Handle */
 .vf-selector-area::-webkit-scrollbar-thumb {
-  @apply bg-gray-200 dark:bg-slate-600;
+  @apply bg-gray-200 dark:bg-slate-700;
 }
 
 /* Handle on hover */
 .vf-selector-area::-webkit-scrollbar-thumb:hover {
-  @apply bg-gray-300 dark:bg-slate-700;
+  @apply bg-gray-300 dark:bg-slate-600;
 }
 
 .vf-selector-area::-webkit-scrollbar-corner {
